[package]
name = "highlight-publish-bilibili-job"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
biliup = "0.1.11"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
postgres = { version = "0.19", features = ["with-serde_json-1", "with-chrono-0_4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zeroize = "=1.4.3"

[dev-dependencies]
tempfile = "3"
